# hydra-tracker

./: .gitignore  GITHUB_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icon-first-aid.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
