[package]
name = "hydra-tracker"
version = "1.0.0"
description = "Lightweight water intake reminder and tracker"
authors = ["Abdulrahman"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
